<resources>
    <string name="app_name">AcademApp</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="connection_error">connection error</string>
    <string name="forum">Forum</string>
    <string name="academics">Academics</string>
    <string name="about_me">About Me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usn">USN</string>
    <string name="provide_us_your_college_details">Please provide us your college and academic details below.</string>
    <string name="valid_usn_error">Please enter a valid USN.</string>
    <string name="valid_college_name_error">Please enter a valid college name.</string>
    <string name="continue_btn_text">Continue</string>

    <string name="shared_transition_img">Shared Transition Name</string>
    <string name="network_error">Network Connectivity Issues!\nPlease try again later.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel est semper, dignissim neque eu, lacinia felis. Quisque mollis eros enim, quis vehicula mauris scelerisque at. Fusce sollicitudin, justo vitae tempus luctus, nisl tortor cursus arcu, eget mollis augue felis nec justo. Donec orci augue, iaculis in eleifend sit amet, volutpat vel neque. Phasellus semper orci in mi hendrerit, at convallis dui vulputate. </string>

    <array name="college_names">
        <item>NITK Surathkal</item>
        <item>St. Joseph\'s College of Engineering</item>
        <item>Canara College of Engineering</item>
        <item>Srinivas College</item>
        <item>Sahyadri College of Engineering and Management</item>
    </array>
</resources>
