<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rumaan.academapp.MainActivity">

    <!-- Dummy layout for holding no network -->
    <FrameLayout
        android:id="@+id/dummy_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:clickable="true"
        android:elevation="0dp"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/no_internet_connection"
                android:drawableTop="@drawable/ic_signal_wifi_off_black_24dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/connection_error"
                android:textAllCaps="true"
                android:textColor="@color/Asphalt_grey"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:padding="6dp"
                android:text="Tap here to retry"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/Asphalt_grey"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </FrameLayout>

    <!-- Custom Toolbar here -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:elevation="4dp">

        <Button
            android:id="@+id/btn_forum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:drawableTop="@drawable/ic_forum_black_24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/forum"
            android:textColor="@color/Asphalt_grey"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/btn_academics"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawableTop="@drawable/ic_school_black_24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/academics"
            android:textColor="@color/Asphalt_grey"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/btn_about"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawableTop="@drawable/ic_info_outline_black_24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/about_me"
            android:textColor="@color/Asphalt_grey"
            android:theme="@style/ButtonStyle" />

    </LinearLayout>


</LinearLayout>
